updated the jwtfilter.java for the security purposes